[gd_scene load_steps=13 format=2]

[ext_resource path="res://Texture/blob_idle-r.png" type="Texture" id=1]
[ext_resource path="res://Texture/blob_attack-r.png" type="Texture" id=2]
[ext_resource path="res://Script/Slime.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Util/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Enemy/enemyUI/enemyHP.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("BlobIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BlobAttack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaAttack/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaAttack/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BlobIdle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlobAttack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlobAttack:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaAttack/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaAttack/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BlobIdle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlobAttack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlobIdle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.7263, 7.57662 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.2773, 7.296 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 31.9902, 35.0769 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31.1483, 42.0899 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 33
script = ExtResource( 3 )

[node name="BlobAttack" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 10
frame = 1

[node name="BlobIdle" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="AreaAttack" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2( -45, -18 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2( -124, -34 )
shape = SubResource( 5 )
disabled = true

[node name="AreaBody" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBody"]
position = Vector2( 12.6765, 11.5028 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Explotion" parent="." instance=ExtResource( 4 )]

[node name="HP" parent="." instance=ExtResource( 5 )]
margin_left = -30.8677
margin_top = -84.1847
margin_right = 49.1323
margin_bottom = -72.1847

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 12.9083, 13.4695 )
scale = Vector2( 2.29083, 2.34695 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.3959, 2.80612 )
shape = SubResource( 7 )

[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="body_entered" from="AreaBody" to="." method="_on_AreaBody_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
